--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -8,6 +8,7 @@
 <div class="container">
     <h1>📚 Student Management System</h1>
     <a href="/students/new" class="btn">➕ Add New Student</a>
+    <a href="/students/json" class="btn">📤 Export Students as JSON</a> 
 
     <table>
         <tr>
